--- a/yamls/pvc.yaml
+++ b/yamls/pvc.yaml
@@ -22,3 +22,20 @@ spec:
   resources:
     requests:
       storage: 5Gi
+
+
+
+
+
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: test
+spec:
+  storageClassName: rook-ceph-block
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
