--- a/yamls/confluent/cp-kafka.yaml
+++ b/yamls/confluent/cp-kafka.yaml
@@ -78,8 +78,9 @@ kind: Service
 metadata:
   name: kafka-cp-kafka-0
 spec:
+  type: NodePort
   ports:
-    - port: 32050
+    - port: 9092
       nodePort: 32050
       name: broker
   selector:
@@ -90,8 +91,9 @@ kind: Service
 metadata:
   name: kafka-cp-kafka-1
 spec:
+  type: NodePort
   ports:
-    - port: 32051
+    - port: 9092
       nodePort: 32051
       name: broker
   selector:
@@ -102,8 +104,9 @@ kind: Service
 metadata:
   name: kafka-cp-kafka-2
 spec:
+  type: NodePort
   ports:
-    - port: 32052
+    - port: 9092
       nodePort: 32052
       name: broker
   selector:
