--- a/yamls/ingress-nginx.yaml
+++ b/yamls/ingress-nginx.yaml
@@ -29,7 +29,7 @@ spec:
         # Any image is permissible as long as:
         # 1. It serves a 404 page at /
         # 2. It serves 200 on a /healthz endpoint
-        image: 192.168.50.39/library/defaultbackend:1.4
+        image: docker.flexem.com/library/defaultbackend:1.4
         livenessProbe:
           httpGet:
             path: /healthz
