--- a/yamls/pv.yaml
+++ b/yamls/pv.yaml
@@ -1,6 +1,21 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  name: test
+  labels:
+    type: test
+spec:
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Recycle
+  hostPath:
+    path: /home/data
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
   name: kafka-0
 spec:
   capacity:
