--- a/yamls/cassandra/statefulset.yaml
+++ b/yamls/cassandra/statefulset.yaml
@@ -1,80 +1,104 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1beta2
 kind: StatefulSet
 metadata:
   labels:
     app: cassandra
   name: cassandra
 spec:
-  serviceName: cassandra
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: cassandra
+  serviceName: cassandra
   template:
     metadata:
       labels:
         app: cassandra
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: kubernetes.io/hostname
+                operator: In
+                values:
+                - 192.168.50.67
+                - 192.168.50.68
       containers:
-        - command:
-            - /run.sh
-          resources:
-            limits:
-              cpu: 0.5
-          env:
-            - name: MAX_HEAP_SIZE
-              value: 512M
-            - name: HEAP_NEWSIZE
-              value: 100M
-            - name: MAX_HEAP_SIZE
-              value: "1758M"
-            - name: HEAP_NEWSIZE
-              value: "100M"
-            - name: CASSANDRA_SEEDS
-              value: "cassandra-0.cassandra.default.svc.cluster.local"
-            - name: CASSANDRA_CLUSTER_NAME
-              value: "K8Demo"
-            - name: CASSANDRA_DC
-              value: "DC1-K8Demo"
-            - name: CASSANDRA_RACK
-              value: "Rack1-K8Demo"
-            - name: CASSANDRA_LISTEN_ON_BROADCAST_ADDRESS
-              value: "true"
-            - name: CASSANDRA_BATCH_SIZE_WARN_THRESHOLD_IN_KB
-              value: "40"
-            - name: CASSANDRA_BATCH_SIZE_FAIL_THRESHOLD_IN_KB
-              value: "200"
-            - name: CASSANDRA_ENDPOINT_SNITCH
-              value: "GossipingPropertyFileSnitch"
-            - name: CASSANDRA_KEY_CACHE_SIZE_IN_MB
-              value: "128"
-            - name: CASSANDRA_TOMBSTONE_FAILURE_THRESHOLD
-              value: "200000"
-            - name: POD_IP
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.podIP
-            - name: POD_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-          image: docker.flexem.com/library/cassandra:3
-          name: cassandra
-          ports:
-            - containerPort: 9042
-              name: cql
-            - containerPort: 7199
-              name: jmx
-          volumeMounts:
-            - mountPath: /var/lib/cassandra
-              name: cassandra-data
+      - env:
+        - name: MAX_HEAP_SIZE
+          value: 512M
+        - name: HEAP_NEWSIZE
+          value: 100M
+        - name: CASSANDRA_SEEDS
+          value: cassandra-0.cassandra.default.svc.cluster.local
+        - name: CASSANDRA_CLUSTER_NAME
+          value: TestCluster
+        - name: CASSANDRA_DC
+          value: dc1
+        - name: CASSANDRA_RACK
+          value: Rack1
+        - name: CASSANDRA_AUTO_BOOTSTRAP
+          value: "false"
+        - name: CASSANDRA_ENDPOINT_SNITCH
+          value: GossipingPropertyFileSnitch
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: status.podIP
+        image: docker.flexem.com/library/cassandra:3
+        imagePullPolicy: Always
+        lifecycle:
+          preStop:
+            exec:
+              command:
+              - /bin/sh
+              - -c
+              - PID=$(pidof java) && kill $PID && while ps -p $PID > /dev/null; do
+                sleep 1; done
+        name: cassandra
+        ports:
+        - containerPort: 7000
+          name: intra-node
+          protocol: TCP
+        - containerPort: 7001
+          name: tls-intra-node
+          protocol: TCP
+        - containerPort: 7199
+          name: jmx
+          protocol: TCP
+        - containerPort: 9042
+          name: cql
+          protocol: TCP
+        resources:
+          limits:
+            cpu: 500m
+            memory: 1Gi
+          requests:
+            cpu: 500m
+            memory: 1Gi
+        securityContext:
+          capabilities:
+            add:
+            - IPC_LOCK
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /var/lib/cassandra
+          name: cassandra-data
+      restartPolicy: Always
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
+  updateStrategy:
+    type: OnDelete
   volumeClaimTemplates:
   - metadata:
       name: cassandra-data
     spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: rook-ceph-block
+      accessModes:
+      - ReadWriteOnce
       resources:
         requests:
           storage: 20Gi
-
