--- a/yamls/confluent/cp-kafka.yaml
+++ b/yamls/confluent/cp-kafka.yaml
@@ -123,7 +123,7 @@ metadata:
 spec:
   containers:
   - name: kafka-canary
-    image: "confluentinc/cp-kafka:5.0.0"
+    image: "confluentinc/cp-kafka:5.1.2"
     imagePullPolicy: "IfNotPresent"
     command:
     - sh
@@ -166,6 +166,16 @@ spec:
         prometheus.io/port: "5556"
     spec:
       affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: kubernetes.io/hostname
+                operator: In
+                values:
+                - 192.168.50.67
+                - 192.168.50.68
+                - 192.168.50.69
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
           - weight: 1
@@ -203,7 +213,7 @@ spec:
         - name: jmx-config
           mountPath: /etc/jmx-kafka
       - name: cp-kafka-broker
-        image: "confluentinc/cp-kafka:5.0.0"
+        image: "confluentinc/cp-kafka:5.1.2"
         imagePullPolicy: "IfNotPresent"
         ports:
         - containerPort: 9092
