--- a/yamls/confluent/cp-zookeeper.yaml
+++ b/yamls/confluent/cp-zookeeper.yaml
@@ -100,6 +100,16 @@ spec:
         prometheus.io/port: "5556"
     spec:
       affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: kubernetes.io/hostname
+                operator: In
+                values:
+                - 192.168.50.67
+                - 192.168.50.68
+                - 192.168.50.69
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
           - weight: 1
@@ -137,7 +147,7 @@ spec:
         - name: jmx-config
           mountPath: /etc/jmx-zookeeper
       - name: cp-zookeeper-server
-        image: "confluentinc/cp-zookeeper:5.0.0"
+        image: "confluentinc/cp-zookeeper:5.1.2"
         imagePullPolicy: "IfNotPresent"
         livenessProbe:
           exec:
