--- a/yamls/cassandra/cassandra-statefulset.yaml
+++ b/yamls/cassandra/cassandra-statefulset.yaml
@@ -84,6 +84,8 @@ spec:
   volumeClaimTemplates:
   - metadata:
       name: cassandra-data
+      labels:
+        app: cassandra
     spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
