--- a/yamls/scylladb/scylla-statefulset.yaml
+++ b/yamls/scylladb/scylla-statefulset.yaml
@@ -38,10 +38,14 @@ spec:
           imagePullPolicy: IfNotPresent
           args: 
             - --seeds=scylla-0.scylla.scylla.svc.cluster.local
+            # - --overprovisioned=0
+#            - --developer-mode=0
             # - --listen-address=$(POD_IP)
-            - --overprovisioned=1
+            # - --rpc-address=$(POD_IP)
             - --cluster-name=TestCluster
             - --endpoint-snitch=GossipingPropertyFileSnitch
+            - --cpuset=1,2
+            - --memory=4G
           ports:
             - containerPort: 7000
               name: intra-node
@@ -58,7 +62,7 @@ spec:
           resources:
             limits:
               cpu: 2
-              memory: 4Gi
+              memory: 6Gi
             requests:
               cpu: 500m
               memory: 1Gi
