--- a/yamls/flink/jobmanager-deployment.yaml
+++ b/yamls/flink/jobmanager-deployment.yaml
@@ -1,9 +1,13 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flink-jobmanager
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: flink
+      component: jobmanager
   template:
     metadata:
       labels:
@@ -12,18 +16,45 @@ spec:
     spec:
       containers:
       - name: jobmanager
-        image: flink:1.7.2
-        args:
-        - jobmanager
+        image: docker.flexem.com/library/flink:1.10.0-1
+        workingDir: /opt/flink
+        command: ["/bin/bash", "-c", "$FLINK_HOME/bin/jobmanager.sh start;\
+          while :;
+          do
+            if [[ -f $(find log -name '*jobmanager*.log' -print -quit) ]];
+              then tail -f -n +1 log/*jobmanager*.log;
+            fi;
+          done"]
         ports:
         - containerPort: 6123
           name: rpc
         - containerPort: 6124
           name: blob
-        - containerPort: 6125
-          name: query
         - containerPort: 8081
           name: ui
-        env:
-        - name: JOB_MANAGER_RPC_ADDRESS
-          value: flink-jobmanager
+        - containerPort: 9249
+          name: metrics
+        livenessProbe:
+          tcpSocket:
+            port: 6123
+          initialDelaySeconds: 30
+          periodSeconds: 60
+        volumeMounts:
+        - name: flink-config-volume
+          mountPath: /opt/jars
+        - mountPath: /var/lib/grafana
+          name: jobmanager-jars
+        securityContext:
+          runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
+      volumes:
+      - name: flink-config-volume
+        configMap:
+          name: flink-config
+          items:
+          - key: flink-conf.yaml
+            path: flink-conf.yaml
+          - key: log4j.properties
+            path: log4j.properties
+      - name: jobmanager-jars
+        persistentVolumeClaim: 
+          claimName: jobmanager-jars
