--- a/yamls/flink/jobmanager-service.yaml
+++ b/yamls/flink/jobmanager-service.yaml
@@ -3,29 +3,30 @@ kind: Service
 metadata:
   name: flink-jobmanager
 spec:
+  type: ClusterIP
   ports:
   - name: rpc
     port: 6123
   - name: blob
     port: 6124
-  - name: query
-    port: 6125
   - name: ui
     port: 8081
+  - name: metrics
+    port: 9249
   selector:
     app: flink
     component: jobmanager
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: flink-jobmanager-ui
+  name: flink-jobmanager-rest
 spec:
-  ports:
-  - name: ui
-    port: 8081
   type: NodePort
+  ports:
+  - name: rest
+    port: 8081
+    targetPort: 8081
   selector:
     app: flink
     component: jobmanager
