--- a/yamls/flink/taskmanager-deployment.yaml
+++ b/yamls/flink/taskmanager-deployment.yaml
@@ -1,9 +1,13 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flink-taskmanager
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      app: flink
+      component: taskmanager
   template:
     metadata:
       labels:
@@ -12,21 +16,36 @@ spec:
     spec:
       containers:
       - name: taskmanager
-        image: flink:1.7.2
-        args:
-        - taskmanager
-        - "-Dtaskmanager.host=$(K8S_POD_IP)"
+        image: docker.flexem.com/library/flink:1.10.0-1
+        workingDir: /opt/flink
+        command: ["/bin/bash", "-c", "$FLINK_HOME/bin/taskmanager.sh start; \
+          while :;
+          do
+            if [[ -f $(find log -name '*taskmanager*.log' -print -quit) ]];
+              then tail -f -n +1 log/*taskmanager*.log;
+            fi;
+          done"]
         ports:
-        - containerPort: 6121
-          name: data
         - containerPort: 6122
           name: rpc
-        - containerPort: 6125
-          name: query
-        env:
-        - name: JOB_MANAGER_RPC_ADDRESS
-          value: flink-jobmanager
-        - name: K8S_POD_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
+        - containerPort: 9249
+          name: metrics
+        livenessProbe:
+          tcpSocket:
+            port: 6122
+          initialDelaySeconds: 30
+          periodSeconds: 60
+        volumeMounts:
+        - name: flink-config-volume
+          mountPath: /opt/flink/conf/
+        securityContext:
+          runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
+      volumes:
+      - name: flink-config-volume
+        configMap:
+          name: flink-config
+          items:
+          - key: flink-conf.yaml
+            path: flink-conf.yaml
+          - key: log4j.properties
+            path: log4j.properties
