--- a/yamls/flink/pvc.yaml
+++ b/yamls/flink/pvc.yaml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: jobmanager-jars
+  name: flink-jars
 spec:
   storageClassName: rook-ceph-block
   accessModes:
